--- a/pages/p8/958387.md
+++ b/pages/p8/958387.md
@@ -1,4 +1,4 @@
-### 献给反专制战士的寓言（1）阿甘和农人(图)
+### 人生低谷如弹簧 顶住压力就弹高(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="寓言 阿甘 毒蛇 红龙" src="https://img3.secretchina.com/pic/2020/9-5/p2769842a372381838-ss.jpg"/>
+ <p style="text-align:center">
+  <img alt="司马迁 史记 逆境 潜能" src="https://img3.secretchina.com/pic/2020/11-27/p2826542a727606839-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   献给反专制战士的寓言（1）阿甘和农人。（图片来源：Adobestock）
+   人生低谷如弹簧，顶住压力就弹高。（图片来源：Adobe stock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,150 +21,68 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  【陈光诚专访】 当年发生了什麽？为什麽要支持川普竞选总统？触目惊心的亲身经历告诉你背后的故事](http://141.164.51.119:10000/videos/news/cgc02.html)
-
-#### [ 🔥  《为你而来》（法轮功修炼者的故事）](http://141.164.51.119:10000/videos/news/ComingForYou.html)
-
-#### [ 🔥  内蒙局勢升溫，中共強推汉语教学， 一場文化滅絕背後的政治較量（江峰漫談20200903第231期）](http://141.164.51.119:10000/videos/news/jf03.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  <span style="font-size:22px">
-   <strong>
-    <span href="https://www.secretchina.com/news/gb/tag/寓言" target="_blank">
-     寓言
-    </span>
-    新编三部：第一部《阿甘和农人》
-   </strong>
+  “人无千日好，花无百日红”，一个人的前途，如同海上的浪潮起起落落，时有低潮，时有高潮。遇到困境，很多人不是算命卜卦、求命改运，就是向
+  <span href="https://zh.wikipedia.org/wiki/%E5%9C%9F%E5%9C%B0%E5%85%AC">
+   土地公
   </span>
+  、
+  <span href="https://zh.wikipedia.org/wiki/%E5%AA%BD%E7%A5%96">
+   妈祖
+  </span>
+  婆祈求化解，希望前途发达顺遂，却往往慌乱无功。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  <strong>
-   1、农人死后
-  </strong>
- </p>
- <p>
-  农夫被蛇咬死后，
-  <span href="https://www.secretchina.com/news/gb/tag/阿甘" target="_blank">
-   阿甘
+  其实，人生的低谷并没有我们想像中的那么可怕，只要鼓起勇气，努力调节心情，坚强面对，我们甚至可以利用
+  <span href="https://www.secretchina.com/news/gb/tag/逆境" target="_blank">
+   逆境
   </span>
-  再无任何嗜好，只喜欢灭蛇，世上的
+  ，打造出一个全新的自己。
+ </p>
+ <p>
   <strong>
-   毒蛇
+   在人生的低谷，咬紧牙关
   </strong>
-  几乎都被他灭光了。
  </p>
  <p>
-  西山的红皇教主下山了，对阿甘说：“这蛇也是世上生灵，你把它灭光了，地球上就少了一种生物。”
+  人生不如意事十之八九，面对困境，别人能给予的帮忙有限，主要的还是靠自己。汉朝
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/司马迁" target="_blank">
+    司马迁
+   </span>
+  </strong>
+  受阉刑之苦，奇耻大辱，却咬紧牙根完成《
+  <strong>
+   史记
+  </strong>
+  》；
  </p>
  <p>
-  阿甘说：“我不知道那么多，我只知道蛇咬死了农夫，所以我发誓要把蛇灭光。”教主无奈，只好回西山去了。
- </p>
- <p>
-  阿甘灭蛇（
-  <span href="https://www.secretchina.com/news/gb/tag/毒蛇" target="_blank">
-   毒蛇
+  隋朝静琬大师为保存法宝，咬紧牙根雕刻《
+  <span href="https://zh.wikipedia.org/wiki/%E6%88%BF%E5%B1%B1%E7%9F%B3%E7%B6%93">
+   房山石经
   </span>
-  ）不止，眼看毒蛇就要被灭光了。教主召见蛇王，说：“你作恶也不懂掩饰，露山露水，农夫好人，被你骗过，却骗不过愚钝的阿甘。罢！罢！罢！我只好祭出幽灵大法，你把这人血馒头吃下，化身亮丽大
+  》，留下了世界上最大一部石书。
+ </p>
+ <p>
+  古来大德圣贤成就的背后，无不来自一股对理想的坚持。咬紧牙根，就能激发
   <strong>
-   红龙
+   <span href="https://www.secretchina.com/news/gb/tag/潜能" target="_blank">
+    潜能
+   </span>
   </strong>
-  ，也可欺世盗名。这西方已没有你的活路，逃东方去吧。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   2、阿甘龙蛇难分
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  阿甘听东方有窸窣之声，知蛇群窜逃东方。他抄起灭蛇叉，那是先贤们留下的灭蛇神器，向着太阳奔疾而去。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  东方大地，艳阳下，漫山遍野长满了桂花树，林中飘着云霞，有龙凤圜绕其间。阿甘傻了眼，看那灵鸟儿可爱赛娉婷，叮叮咛咛似银铃；那长练如蛇长爪角，身闪彩光眼如炬。不管那么多，举起灭蛇叉向那七寸就叉将下去。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  叉角相触擦出耀眼火花。阿甘耳中响起一个由远而近的声音：“你要寻的大
-  <span href="https://www.secretchina.com/news/gb/tag/红龙" target="_blank">
-   红龙
-  </span>
-  不在此地，此地月桂园，万年前与你们西方的伊甸园是姐妹城市。你乘阳光来到这里，大红龙躲这下方十万八千里之外。我等不与大红龙为伍，它亮丽却无彩光，非我同类。你在这扯上一片云彩，就会去到那里。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  阿甘说不用了，byebye，召来洁白斑斓的羽毛，乘风而去。
+  ，增加力量，勇往向前。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -180,7 +98,7 @@
  </center>
  <p>
   <strong>
-   3、阿甘三打大红龙
+   在人生的低谷，顺其自然
   </strong>
  </p>
  <center>
@@ -196,7 +114,7 @@
   </div>
  </center>
  <p>
-  阿甘乘着洁白羽毛，空际金光如浪，穿云过雾，落到红山岭。这里东西方交汇，正是龙蛇混杂之地。说时迟那时快，一条大红龙迎面而来。
+  处于人生的低谷，我们往往会觉得很焦躁，会有很多抱怨，抱怨时不待我，抱怨天意弄人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +129,7 @@
   </div>
  </center>
  <p>
-  阿甘说：“你这蛇鼠之辈，骗得了农夫骗不了我，看叉！”红龙应声倒地。
+  其实，若是静下心想想，你会发觉，抱怨是没有任何用的，反倒会让自己越来越负面消极；不如静下心，做好当下的事情，总结经验，再度出发。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,7 +144,7 @@
   </div>
  </center>
  <p>
-  这时，一个身披农夫衣，头戴教士帽的人刚好路过。“喂！喂！喂！你这傻瓜，这么好端端的一个生命，你怎么就把它给打死了。可怜见，大爱！大爱！”
+  曾经听过这样一个故事：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,7 +159,7 @@
   </div>
  </center>
  <p>
-  阿甘也不吭声，找红龙去了。一处山洞，露出一个硕大的蛇头，口中吐着盈尺的毒舌。阿甘举叉一跃而上，那毒蛇喷出毒雾，阿甘用羽毛一拂，大步上前，飞掷出灭蛇叉，那大红龙呜乎哀哉了。
+  某个寺院的小和尚觉得院落里太单调了，就买了很多草籽撒在院子里。希望到了明年春天，院子里能有一片绿意。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -256,7 +174,7 @@
   </div>
  </center>
  <p>
-  这时，一个身披农夫衣，头戴政客帽类似总统的人刚好路过。“喂！喂！喂！你这傻瓜，我吹响喇叭它就会跳蛇舞，极吸引人的，你怎么就把它给打死了。可怜见，大慈！大慈！”话说间，一条大红龙已然窜到农夫总统的身后。
+  谁知道撒的途中起风了，吹走了很多草籽，小和尚心里异常失落。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -271,7 +189,7 @@
   </div>
  </center>
  <p>
-  阿甘见似状危，大喊一声，总统闪开，一叉刺上，那大红龙蜷蛐地上，死而不僵。这时，一群身披农夫衣，头戴博士帽的人刚好路过。见几条大红龙死于阿甘叉下。齐呼“可怜见，我等正在论究红龙即龙的哲学问题，你这就打死了它们，大悲！大悲！”引来了各式其式的农人们走来看热闹。
+  师父看他这副模样，却不以为意地说：“吹走的多半是空的，撒下去也发不了芽。担什么心呢？随性！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -286,9 +204,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   4、阿甘屠蛇
-  </strong>
+  草籽撒下了之后，夜里又下起了大雨，小和尚一直不能入睡，他心里暗暗担心草籽被冲走。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -303,7 +219,7 @@
   </div>
  </center>
  <p>
-  这傻瓜也真是的，这龙或还有救，你看它好像还在动。于是农人们上前人工呼吸的人工呼吸，按压心脏的按压心脏。阿甘一看急了眼，大喊那蛇有毒，千万不要靠近啊。
+  第二天早上，他早早跑出了禅房，果然地上的草籽都不见了。于是他马上跑进师父的禅房说：“师父，昨晚一场大雨把地上的草籽都冲走了，怎么办呀？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -318,7 +234,7 @@
   </div>
  </center>
  <p>
-  农人不理，阿甘急得直跺脚：“那不是龙，那是披着龙皮的蛇，真龙都在月桂园上。”
+  师父依然不慌不忙地说：“不用着急，草籽被冲到哪里就在哪里发芽。随缘！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -333,7 +249,37 @@
   </div>
  </center>
  <p>
-  农人们说，你在说天方胡话阿，傻瓜，有爪有角的就是龙，懂吗。阿甘气得喘呼呼，抄起灭蛇叉，“我要把它的皮剥下来，你们就会看到它是蛇。”
+  不久，许多青翠的草苗果然破土而出，原来没有撒到的一些角落里居然也长出了许多青翠的小苗。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  小和尚高兴的对师父说：“师父，太好了，我种的草长出来了！”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  师父微笑道：“随喜！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -352,7 +298,7 @@
   </ins>
  </center>
  <p>
-  农人们说，“上天有好生之德，有我们在，你休得胡来。”
+  其实，小和尚撒草籽遇上的问题，就如我们遇上的人生困境一样，百般思量，千种纠结，却不如做好当下的事情，顺其自然；当你安之若素，平心静气时，柳暗花明也会很快不期而遇。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -367,7 +313,7 @@
   </div>
  </center>
  <p>
-  阿甘情急之中忽然想起，大喊着说：“你们这些农人，忘了你们的祖先是怎么被蛇咬死的吗，怎么好了伤疤忘了痛。”
+  人生的低谷，每个人都会遇见；当我们面临人生的低谷时，一定要相信，每一次跌落，都不是白白掉进去的，每一次跌落，你都可以从人生的低谷当中看到向上的力量。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -382,7 +328,7 @@
   </div>
  </center>
  <p>
-  农人们默然，有人撬开红龙的嘴巴，见那獠牙毒管历历在目。阿甘撩起灭蛇叉一抄，那漂亮的麟片纷纷脱落，皮壳脱尽，蛇形尽现。
+  当你摔疼了，痛哭了，你的每次痛哭都会成为你向上的力量。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -397,7 +343,7 @@
   </div>
  </center>
  <p>
-  那农人们吓的目瞪口呆，张开的嘴巴合不拢，舌头掉出半尺长。
+  人是会反省的，每次的反省都会让你变得更强大，你所经历的每一件坏事，都有可能会影响你的前路。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -412,9 +358,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   5、阿甘再次奔跑
-  </strong>
+  那些压不垮你的，都会让你更加强大
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -429,7 +373,7 @@
   </div>
  </center>
  <p>
-  某个世纪，人们再次看到阿甘在奔跑，身上背着灭蛇叉。他由东跑到西，由南极跑到北极，这次人们知道他为什么在奔跑。
+  人生的低谷，也犹如弹簧，不到最后一刻，你都不知道自己会弹得多高。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -444,7 +388,7 @@
   </div>
  </center>
  <p>
-  末几，有三几个农人跟在阿甘后头跑，后来，越来越多的人跟在阿甘后头跑。
+  挫折就是一道残酷的生存考验，关键在于你有没有借助它成就自己。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -459,7 +403,7 @@
   </div>
  </center>
  <p>
-  不分老幼，不分肤色，不分地位。穿西装的博士们加入了队伍，政商精英们加入了队伍，众多宗教领袖们也加人了队伍——阿甘和众人的脚步抖动了地球。
+  也许，人生的低谷中有很多猛兽，你只能去猜测；谁都不愿意停留的低谷，谁知道会不会有什么灵丹妙药呢？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -474,51 +418,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   注：参考美国
-   <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjbvJPTjtHrAhWxy4sBHQwIDp0QmhMwEXoECAUQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E5%25A5%25A5%25E6%2596%25AF%25E5%258D%25A1%25E9%2587%2591%25E5%2583%258F%25E5%25A5%2596&amp;usg=AOvVaw1LGkPdizIyb9UtFY0o4WOa">
-    奥斯卡
-   </span>
-   获奖电影《
-   <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiV1ay_jtHrAhUkzIsBHeCHC9UQmhMwH3oECAoQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E9%2598%25BF%25E7%2594%2598%25E6%25AD%25A3%25E4%25BC%25A0&amp;usg=AOvVaw2hSQeqCFUYFa2AFkFPiFVV">
-    阿甘正传
-   </span>
-   》。
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+  谁都不想去经历人生的低谷，但万一你真的来到了人生的低谷，请不要害怕，因为要始终坚信，风雨过后，最美的彩虹一定在等着你。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -531,6 +431,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:wendy
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41Jr"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -548,13 +482,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/945224.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/945224.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/945224.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/05/945224.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/958387.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/958387.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/958387.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/10/958387.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/945224.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/958387.md' width='0px' height='0px'/>
