--- a/pages/nf4514/n12678286.md
+++ b/pages/nf4514/n12678286.md
@@ -42,12 +42,48 @@
 <p>
  哈佛法律专家表示，针对受第一修正案保护的行为发起弹劾违宪。
 </p>
-<p>
+<h4>
  以下是1月10日（美东时间）国会大厦冲突事件发展，以及美国大选相关内容的实时
  <ok href="https://www.epochtimes.com/gb/tag/%E6%9B%B4%E6%96%B0.html">
   更新
  </ok>
  。
+</h4>
+<h3>
+ 9大科技平台将川普总统列入黑名单
+</h3>
+<p>
+ 目前九个科技巨头运行平台已将川普总统列入黑名单或限制了他的账户权限。
+</p>
+<p>
+ 它们是：推特（Twitter）、谷歌（Google）、苹果（Apple），脸书（Facebook）、油管（YouTube）、Instagram，Snapchat，Pinterest、Shopify、Reddit、TikTok、Twitch和Discord均已禁止或限制川普总统使用其平台。
+</p>
+<h3>
+ 联邦检察官：载有炸弹和枪支的车曾停国会附近
+</h3>
+<p>
+ 美国联邦检察官说，上周三一名来自阿拉巴马州男子将一辆装有11枚自制炸弹、一挺突击步枪和一把手枪的卡车停在距美国国会大厦两个街区的地方，时间长达数小时。
+</p>
+<p>
+ 据称另一名男子拿着突击步枪和数百发子弹出现在国会大厦，并告诉熟人他想打死众议院议长南希·佩洛西。
+</p>
+<p>
+ 这是联邦检察官迄今披露的一部分令人不安的细节，此前美国媒体报导，带头攻入国会并进行破坏的是安提法份子。
+</p>
+<h3>
+ 国会议员将在机场加强安保
+</h3>
+<p>
+ 在冲击国会大厦事件后，上周几名国会参议员在机场旅行时，都受到选民的痛斥。CNN报导，以后国会议员在机场将得到更多的安全保护。
+</p>
+<p>
+ 根据上周五社交媒体上发布的视频，南卡罗来纳州的参议员格雷厄姆（Lindsey Graham of South）在里根国家机场旅行时，遭到川普总统支持者的大声怒斥，说他是“国家的叛徒”。
+</p>
+<p>
+ 在星期三的抗议活动之前，川普的支持者还在从盐湖城飞往华盛顿特区的航班上，对犹他州参议员罗姆尼（Mitt Romney）进行了骚扰。
+</p>
+<p>
+ 此外在1月20日的就职典礼上，国会大厦警察的特工将加强对华盛顿特区三个主要机场的安保：里根国家机场（DCA），巴尔的摩华盛顿国际机场（BWI）和华盛顿杜勒斯国际机场（IAD）。
 </p>
 <h3>
  6:45 哈佛法律专家：现在弹劾川普违宪
