--- a/pages/nsc413/n12678707.md
+++ b/pages/nsc413/n12678707.md
@@ -52,6 +52,14 @@
 <h3>
  病毒带来可怕精神疾病？更多国家出现案例
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12678148" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_1181990332-copy.jpg">
+  <img alt="感染新冠病毒后还可能出现精神疾病，如忧郁、焦虑、甚至幻觉症状。(Shutterstock)" class="size-large wp-image-12678148" src="https://i.epochtimes.com/assets/uploads/2021/01/shutterstock_1181990332-copy-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  感染新冠病毒后还可能出现精神疾病，如忧郁、焦虑、甚至幻觉症状。(Shutterstock)
+ </figcaption><br/>
+</figure><br/>
 <p>
  许多患者出现不同的精神疾病，包括妄想、幻觉、忧郁症、焦虑症、躁郁症等，目前美国、英国、西班牙等多个国家的医生都报告了类似病例。
 </p>
@@ -62,8 +70,16 @@
  精神科医师、整合医学专家杨景端医师介绍，最近的一些研究发现确实表明，人们在感染病毒后，发生精神疾病的风险增加了很多。，“一方面，以前就有精神疾病的人，得新冠的风险要比没有精神疾病的人大；另一方面，没有精神病史的人，确诊后，发生精神疾病的比率比正常人多2～3倍。”
 </p>
 <h3>
- 2020年增长最快的工作
+ 2020年增长最快的工作机会
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12426247" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1254633442.jpg">
+  <img alt="" class="size-large wp-image-12426247" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1254633442-600x405.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  疫情期间，零时工或独立送货合同工的工作机会大增。(Justin Sullivan/Getty Images)
+ </figcaption><br/>
+</figure><br/>
 <p>
  随着疫情肆虐，一些工种的需求度也发生了变化。薪资比较网站PayScale公司最近分析了433万人的大众网聚数据，以查找2020年与前一年相比增长最快的工作。
 </p>
@@ -103,6 +119,14 @@
 <h3>
  强封锁无效？ 德国单日疫亡人数创新高
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12668364" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1294559232.jpg">
+  <img alt="" class="size-large wp-image-12668364" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1294559232-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2021年1月5日，德国柏林，民众在柏林体育馆（Treptow Arena Berlin）疫苗接种中心外排队。(Maja Hitij/Getty Images)
+ </figcaption><br/>
+</figure><br/>
 <p>
  德国周四（1月7日）通报，新增中共病毒疫亡者1188人，创单日新高纪录。因担心传染力更高的变种病毒可能让早已穷于应付的医院不堪负荷，德国进一步加强全国防疫封锁措施。
 </p>
@@ -112,9 +136,9 @@
 <p>
  然而，迄今为止，这些措施皆未见成效，德国的单日感染人数和疫亡人数都在破纪录。负责疾病管制及预防工作的罗伯特‧科赫研究所（RKI）1月7日公布的死亡人数超过了前一个纪录，也就是12月30日通报的1129人，德国累计疫亡者达到38,795人。
 </p>
-<p>
+<h3>
  河北沧州防疫政策多变引恐慌 村民求助
-</p>
+</h3>
 <p>
  1月9日，河北沧州南皮县村民王强（化名）向大纪元记者求助，他一家五口人，奶奶已经80岁，父母有糖尿病和高血压，一家核酸检测结果阴性，却被村干部要求强制集中隔离。
 </p>
@@ -133,6 +157,14 @@
 <h3>
  河北防疫文件泄密：新年疫情更危急
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12675604" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/ea9cbe7b184d4cd9bb57904f2c9ad524.jpg">
+  <img alt="" class="size-large wp-image-12675604" src="https://i.epochtimes.com/assets/uploads/2021/01/ea9cbe7b184d4cd9bb57904f2c9ad524-600x450.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  河北石家庄疫情严重，图为石家庄的人们排长队做核酸检测。（视频截图）
+ </figcaption><br/>
+</figure><br/>
 <p>
  大纪元日前获得中共河北省内部防疫文件，根据石家庄防疫文件《石家庄市全员检测数量统计表》，发现中共当局再次撒谎，当地的单检能力根本达不到要求，因此必须使用混检。
 </p>
