--- a/pages/nf4514/n12678286.md
+++ b/pages/nf4514/n12678286.md
@@ -50,6 +50,27 @@
  。
 </h4>
 <h3>
+ 9:35
+</h3>
+<p>
+ 众议院议长佩洛西(Nancy Pelosi)周五（1月8日）在一封信中敦促她的民主党党团返回华盛顿，准备让民主党人第二次推进弹劾川普总统的工作。
+</p>
+<p>
+ 佩洛西和一些民主党人指称，川普煽动了1月6日攻破国会大厦事件。 但川普当天在对大批支持者发表讲话时，要求他们在国会大厦附近游行抗议时要“和平地、爱国地发出你们的声音”。总统没有说过任何要闯入国会大楼的话。
+</p>
+<h3>
+ 9:20
+</h3>
+<p>
+ 当选总统拜登周五（1月8日）承诺，宣誓就职后将“挫败全国步枪协会”（NRA）。
+</p>
+<p>
+ NRA拥有超过500万名会员，该协会寻求依据宪法《第二修正案》，保护人们的拥枪权。NRA游说部最近发表文章称，拜登就职后将“开始对美国枪支所有者的权利进行协调攻击”。
+</p>
+<p>
+ “我们必须做好迎接攻击的准备。”NRA写道
+</p>
+<h3>
  9:03 九大科技平台将川普总统列入黑名单
 </h3>
 <p>
@@ -107,7 +128,7 @@
  根据上周五社交媒体上发布的视频，南卡罗来纳州的参议员格雷厄姆（Lindsey Graham of South）在里根国家机场旅行时，遭到川普总统支持者的大声怒斥，说他是“国家的叛徒”。
 </p>
 <p>
- 在星期三的抗议活动之前，川普的支持者还在从盐湖城飞往华盛顿特区的航班上，对犹他州参议员罗姆尼（Mitt Romney）进行了骚扰。
+ 在星期三的抗议活动之前，川普的支持者还在从盐湖城飞往华盛顿特区的航班上，对犹他州参议员罗姆尼（Mitt Romney）进行质问。
 </p>
 <p>
  此外在1月20日的就职典礼上，国会大厦警察的特工将加强对华盛顿特区三个主要机场的安保：里根国家机场（DCA），巴尔的摩华盛顿国际机场（BWI）和华盛顿杜勒斯国际机场（IAD）。
