--- a/pages/nsc412/n12678286.md
+++ b/pages/nsc412/n12678286.md
@@ -50,6 +50,50 @@
  。
 </h4>
 <h3>
+ 13:00 拜登国防部长提名人将收到170万美元支付
+</h3>
+<p>
+ 拜登的国防部长提名人、退役将军劳埃德·奥斯汀（Lloyd Austin）将因放弃国防承包商雷神技术公司（Raytheon Technologies Co）的董事会席位而收取高达170万美元的支付。
+</p>
+<p>
+ 奥斯汀在2016年从军队退休后，在雷神公司中拿到了一个董事会席位。
+</p>
+<h3>
+ 12:39 川普12日将访问美墨边境
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12590632" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229893816.jpg">
+  <img alt="" class="size-large wp-image-12590632" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229893816-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年12月1日，美国加州哈昆巴（Jacumba），建筑工人在美墨边境继续修建边界墙。(Sandy Huffaker/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 白宫1月9日表示，美国总统川普预计将于周二（1月12日）前往美墨边境，强调其政府在建造边境墙方面取得的进展。
+</p>
+<p>
+ 川普将前往德克萨斯州的阿拉莫镇（Alamo）。这将突出400英里边境墙的完成，以及川普政府改革破碎的移民系统的努力。
+</p>
+<p>
+ 建造边境墙是川普2016年的竞选承诺之一，总统称赞这项措施既能遏制非法移民的流入，又能减少犯罪。
+</p>
+<p>
+ 当选总统乔·拜登曾誓言要停止修建边境墙。
+</p>
+<h3>
+ 12:30 揭左派对国会大厦暴力事件部分负责 西雅图警察工会主席遭攻击
+</h3>
+<p>
+ 西雅图警察工会主席迈克·索兰（Mike Solan）在推特上发表推文，暗示极左派也要对国会大厦暴力事件承担部分责任。索兰随后立即遭到攻击，并正在面临内部调查，同时被要求道歉或辞职。
+</p>
+<p>
+ 索兰周五（1月8日）在推特上提到1月6日国会大厦暴力事件时说：“极右和极左要为那悲惨的一天承担责任。”
+</p>
+<p>
+ 索兰还转发了一条消息称，一名黑命贵活跃人士混在川普的支持者中，冲入国会大厦。
+</p>
+<h3>
  12:00 法学教授：川普讲话没有号召暴力 不足以构成弹劾指控
 </h3>
 <p>
@@ -60,6 +104,9 @@
 </p>
 <p>
  川普在1月6日的讲话中，要求支持者在国会大厦附近游行抗议时要“和平地、爱国地发出你们的声音”。
+</p>
+<p>
+ “（总统的）演讲本身并没有为暴乱或煽动的指控提供明确的依据，”特利说。“总统告诉他的支持者在国会和平游行……他没有号召暴动。他没有号召暴力。”
 </p>
 <h3>
  11:30 ACLU警告脸书、推特享有“不受约束”的权力
