--- a/pages/nsc412/n12678707.md
+++ b/pages/nsc412/n12678707.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新1.10】中共病毒患者现精神疾病" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1262024365-600x400.jpg"/>
+<div><img alt="【疫情更新1.10】日本现新突变病毒株" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230413930-600x400.jpg"/>
 <div class="caption">
- 中共病毒（武汉肺炎，COVID-19）会导致近二成的患者出现精神疾病。(Mario Tama/Getty Images)
+ 图为2021年1月4日，日本东京新宿站，大部分乘客戴着口罩。（PHILIP FONG/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2021年01月10日讯】（大纪元记者徐简、戴芙若综合报导）截止到2021年1月10日，全球纪录了9014万人确诊感染
+ 【大纪元2021年01月10日讯】（大纪元记者徐简、戴芙若、谢佳宣综合报导）截止到2021年1月10日，全球纪录了9014万人确诊感染
  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
   中共病毒
  </ok>
@@ -49,6 +49,24 @@
 <h4>
  以下是有关病毒疫情的实时更新：
 </h4>
+<h3>
+ 瑞典新法律赋予政府更多权力实施限制措施
+</h3>
+<p>
+ 瑞典长期以来一直回避实施封锁和戴口罩令作为对抗病毒危机的举措，但该国议会已经赋予政府权力采取更有力的行动，以试图阻止病毒传播。
+</p>
+<p>
+ 瑞典议会上周五（1月8日）通过了一项紧急法律，允许政府限制商店、企业和公共场所（如剧院和公共游泳池）的人数，甚至在违规时下令关闭。政府还将可以对违反规则的个人罚款。这项新法律在本周日正式生效。
+</p>
+<p>
+ 在新法生效以前，政府只能对这种限制提出建议。但随着第二波确诊数量上升、在急诊病房容量已满的情况下，政府表示它需要更多的限制措施。
+</p>
+<p>
+ 截至周六（1月9日），瑞典的总死亡人数为9,433人。该国目前每10万人中有93人染疫死亡，低于英国的120人，但远高于邻国挪威的9人。
+</p>
+<p>
+ 在另一项新生效的规定，长期以来被瑞典卫生官员认为无效的口罩，现在被建议在公共交通的高峰时段使用，但不强制民众一定要戴。
+</p>
 <h3>
  西班牙因暴风雪瘫痪  政府派车队分发疫苗和食品
 </h3>
