同步于: 1月11日3时52分

--- a/pages/nf4514/n12678286.md
+++ b/pages/nf4514/n12678286.md
@@ -50,6 +50,79 @@
  。
 </h4>
 <h3>
+ 14:00 卢比奥谴责推特、脸书等科技公司的审查
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_11592782" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-936608118-e1596928121743.jpg">
+  <img alt="" class="size-large wp-image-11592782" src="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-936608118-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  卢比奥资料照。（Chip Somodevilla/Getty Images）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 美国联邦参议员马可·卢比奥（Marco Rubio）周日接受福克斯节目“Sunday Morning Futures”采访时谴责说，推特、脸书、亚马逊等科技公司的网络审查说明这些公司拥有“垄断权力”。
+</p>
+<p>
+ “这也是左派去给社交媒体公司施压的一个机会，让他们真的不只是扼杀总统，而是扼杀所有人，”卢比奥说，“我们现在生活在这样一个国家，四、五家公司，不经选举，不负责任，拥有做出决定的垄断权：‘我们要把人抹掉，我们要把他们从任何数字平台上抹掉。’”
+</p>
+<h3>
+ 13:20 Parler首席执行官：大科技公司在扼杀言论自由
+</h3>
+<p>
+ 在亚马逊、苹果等几家大型科技公司暂停了Parler的社交媒体网络服务后，Parler首席执总官约翰·马兹（John Matze）周日接受福克斯节目“Sunday Morning Futures”采访时说，正在发生的事情“极其可怕”，大科技公司的举动似乎是为了“扼杀言论自由和市场竞争”。
+</p>
+<p>
+ Parler首席政策官艾米·佩科夫(Amy Peikoff)告诉福克斯节目“Fox &amp; Friends Weekend”，“我相信我们受到了不公平的对待。”
+</p>
+<p>
+ Parler首席执总官马兹在一封电子邮件中告诉《大纪元时报》，他认为苹果、谷歌和亚马逊的行为是没有诚信的，Parler社交媒体平台正在考虑“采取全面的法律行动”。
+</p>
+<h3>
+ 13:00 拜登国防部长提名人将收到170万美元支付
+</h3>
+<p>
+ 拜登的国防部长提名人、退役将军劳埃德·奥斯汀（Lloyd Austin）将因放弃国防承包商雷神技术公司（Raytheon Technologies Co）的董事会席位而收取高达170万美元的支付。
+</p>
+<p>
+ 奥斯汀在2016年从军队退休后，在雷神公司中拿到了一个董事会席位。
+</p>
+<h3>
+ 12:39 川普12日将访问美墨边境
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12590632" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229893816.jpg">
+  <img alt="" class="size-large wp-image-12590632" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229893816-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年12月1日，美国加州哈昆巴（Jacumba），建筑工人在美墨边境继续修建边界墙。(Sandy Huffaker/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 白宫1月9日表示，美国总统川普预计将于周二（1月12日）前往美墨边境，强调其政府在建造边境墙方面取得的进展。
+</p>
+<p>
+ 川普将前往德克萨斯州的阿拉莫镇（Alamo）。这将突出400英里边境墙的完成，以及川普政府改革破碎的移民系统的努力。
+</p>
+<p>
+ 建造边境墙是川普2016年的竞选承诺之一，总统称赞这项措施既能遏制非法移民的流入，又能减少犯罪。
+</p>
+<p>
+ 当选总统乔·拜登曾誓言要停止修建边境墙。
+</p>
+<h3>
+ 12:30 揭左派对国会大厦暴力事件部分负责 西雅图警察工会主席遭攻击
+</h3>
+<p>
+ 西雅图警察工会主席迈克·索兰（Mike Solan）在推特上发表推文，暗示极左派也要对国会大厦暴力事件承担部分责任。索兰随后立即遭到攻击，并正在面临内部调查，同时被要求道歉或辞职。
+</p>
+<p>
+ 索兰周五（1月8日）在推特上提到1月6日国会大厦暴力事件时说：“极右和极左要为那悲惨的一天承担责任。”
+</p>
+<p>
+ 索兰还转发了一条消息称，一名黑命贵活跃人士混在川普的支持者中，冲入国会大厦。
+</p>
+<h3>
  12:00 法学教授：川普讲话没有号召暴力 不足以构成弹劾指控
 </h3>
 <p>
