--- a/pages/nsc412/n12678286.md
+++ b/pages/nsc412/n12678286.md
@@ -50,6 +50,35 @@
  。
 </h4>
 <h3>
+ 14:00 卢比奥谴责推特、脸书等科技公司的审查
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_11592782" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-936608118-e1596928121743.jpg">
+  <img alt="" class="size-large wp-image-11592782" src="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-936608118-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  卢比奥资料照。（Chip Somodevilla/Getty Images）
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 美国联邦参议员马可·卢比奥（Marco Rubio）周日接受福克斯节目“Sunday Morning Futures”采访时谴责说，推特、脸书、亚马逊等科技公司的网络审查说明这些公司拥有“垄断权力”。
+</p>
+<p>
+ “这也是左派去给社交媒体公司施压的一个机会，让他们真的不只是扼杀总统，而是扼杀所有人，”卢比奥说，“我们现在生活在这样一个国家，四、五家公司，不经选举，不负责任，拥有做出决定的垄断权：‘我们要把人抹掉，我们要把他们从任何数字平台上抹掉。’”
+</p>
+<h3>
+ 13:20 Parler首席执行官：大科技公司在扼杀言论自由
+</h3>
+<p>
+ 在亚马逊、苹果等几家大型科技公司暂停了Parler的社交媒体网络服务后，Parler首席执总官约翰·马兹（John Matze）周日接受福克斯节目“Sunday Morning Futures”采访时说，正在发生的事情“极其可怕”，大科技公司的举动似乎是为了“扼杀言论自由和市场竞争”。
+</p>
+<p>
+ Parler首席政策官艾米·佩科夫(Amy Peikoff)告诉福克斯节目“Fox &amp; Friends Weekend”，“我相信我们受到了不公平的对待。”
+</p>
+<p>
+ Parler首席执总官马兹在一封电子邮件中告诉《大纪元时报》，他认为苹果、谷歌和亚马逊的行为是没有诚信的，Parler社交媒体平台正在考虑“采取全面的法律行动”。
+</p>
+<h3>
  13:00 拜登国防部长提名人将收到170万美元支付
 </h3>
 <p>
