--- a/pages/nsc418/n12678707.md
+++ b/pages/nsc418/n12678707.md
@@ -1,13 +1,13 @@
-### 【疫情更新1.10】中共病毒患者现精神疾病
+### 【疫情更新1.10】日本现新突变病毒株
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【疫情更新1.10】日本现新突变病毒株" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230413930-600x400.jpg"/>
+<div><img alt="【疫情更新1.10】国会医生警告议员恐已触病毒" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/US-capitol-edited-700x420-600x400-1.jpg"/>
 <div class="caption">
- 图为2021年1月4日，日本东京新宿站，大部分乘客戴着口罩。（PHILIP FONG/AFP via Getty Images）
+ 图为2021年1月6日晚间，美国国会大厦。（John Moore/Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -49,6 +49,36 @@
 <h4>
  以下是有关病毒疫情的实时更新：
 </h4>
+<h3>
+ 2021年十天内 全美新增2.7万人病死
+</h3>
+<p>
+ 根据约翰·霍普金斯大学的数据显示，2021年才第10天，美国就报告有超过2.7万人因为中共病毒而死亡。截至周日下午1:30，共有27,163例新增死亡报告。
+</p>
+<p>
+ 按照这样的速度，今年1月的死亡人数可能会超过去年12月份，据统计，去年12月的总死亡人数为7.7万人（77,431）。
+</p>
+<p>
+ 此外，今年的新增病例已超过220万例。数据显示，去年12月的总确诊病例为636万（6,365,297），是目前最高的月纪录。
+</p>
+<p>
+ 根据约翰·霍普金斯大学的统计，美国至少有2,219万例确诊（22,197,520），至少有37万人死于该病毒（373,022）。
+</p>
+<h3>
+ 日本再现新变异毒株 与英国南非的都不同
+</h3>
+<p>
+ 日本卫生部周日（1月10日）说，在四名从巴西亚马逊（Amazonas）州来的入境旅客中发现了一种新的中共病毒（冠状病毒，covid-19）变种，跟在英国和南非发现的变种毒株都不相同。这表明在大流行肆虐期间，中共病毒正在不断变异。
+</p>
+<p>
+ 1月2日，四名旅客抵达东京羽田机场，包括一位40多岁的男子、一位30多岁的妇女和两位十几岁的男女。四人在机场做病毒检疫时，被发现是阳性，后来被检出新的变种病毒，跟英国和南非发现的变异病毒都不同。
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/21/1/10/n12679184.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
 <h3>
  瑞典新法律赋予政府更多权力实施限制措施
 </h3>
