--- a/pages/nf4514/n12678286.md
+++ b/pages/nf4514/n12678286.md
@@ -50,6 +50,12 @@
  。
 </h4>
 <h3>
+ 17:30 财政部长姆钦将从中东返回 聚焦过渡工作
+</h3>
+<p>
+ 据SPOX报导，财政部长姆钦已决定取消他在中东地区的额外停留，并将返回华盛顿特区，专注于过渡时期的工作。
+</p>
+<h3>
  17:10 川普或请朱利安尼进行弹劾辩护
 </h3>
 <p>
