--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -115161,4 +115161,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01111202)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01111251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
