同步于: 1月11日20时52分

--- a/pages/nf4514/n12678286.md
+++ b/pages/nf4514/n12678286.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【更新】哈佛专家：弹劾川普是违宪行为" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1197517064-600x400.jpg"/>
+<div><img alt="【1.10更新】哈佛专家：弹劾川普是违宪行为" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1197517064-600x400.jpg"/>
 <div class="caption">
  法律专家艾伦·德肖维兹（Alan Dershowitz）表示，如果在川普总统任期最后几天弹劾他，将违反宪法。(Sarah Silbiger/Getty Images)
 </div></div><hr/>
