--- a/pages/nsc412/n12679740.md
+++ b/pages/nsc412/n12679740.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【更新】密州议会继续推进选举违规调查" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/download-59.jpg"/>
+<div><img alt="【更新】川普高尔夫场被取消锦标赛资格" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1286899639-600x400.jpg"/>
 <div class="caption">
- 2020年12月19日，川普总统支持者来到美国密歇根州首府兰辛（Lansing）市抗议选举舞弊。呼吁司法机构彻查选举舞弊，及参众两院在明年1月6日国会联席会议上质疑有争议州的选举结果。（林慧心／大纪元）
+ 美国职业高尔夫球协会（PGA）宣布，川普所属的高尔夫球场举办2022年PGA锦标赛的资格被取消。图为11月21日，川普总统在他的川普国家高尔夫俱乐部球场上。(Tasos Katopodis/Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
