--- a/pages/nsc412/n12679740.md
+++ b/pages/nsc412/n12679740.md
@@ -75,7 +75,7 @@
  佩洛西在给同事的一封信中提到，川普是对美国宪法和民主的“迫在眉睫的威胁”。她在周日的信中表示，众议院将以“非常严肃”的态度弹劾川普，而此时距离1月20日换届的时间不到两周。
 </p>
 <h3>
- 7:31 众议员：川普仍是地球上最有影响力的人物
+ 7:31 众议员：川普仍是地球上最有影响力的共和党人
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_11588439" style="width: 600px">
  <ok href="https://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1175953698-e1571084372447.jpg">
