--- a/pages/nsc412/n12679740.md
+++ b/pages/nsc412/n12679740.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【更新】又一川普高尔夫场被禁锦标赛资格" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1286899639-600x400.jpg"/>
+<div><img alt="【更新】众院民主党正式提出弹劾川普决议" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229697290-600x400.jpg"/>
 <div class="caption">
- 川普贝德明斯特（Trump Bedminster）高尔夫球俱乐部被取消举办2022年PGA锦标赛资格后，英国苏格兰的“皇家古老高尔夫俱乐部”（R&amp;A）在周一（1月11日）表示，没有计划在川普位于当地的特恩伯里（Trump Turnberry）高尔夫球场及度假村举办未来的任何锦标赛。图为11月21日，川普总统在他的川普国家高尔夫俱乐部球场上。(Tasos Katopodis/Getty Images）
+ 周一（1月11日），众议院民主党正式提出弹劾川普总决议。图为2020年11月20日众议院议长佩洛西（Nancy Pelosi）在国会山举行的新闻发布会上发言。 (Drew Angerer/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
