--- a/pages/nsc412/n12679740.md
+++ b/pages/nsc412/n12679740.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【更新】共和党叫停民主党首次罢免川普表决" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1229697290-600x400.jpg"/>
 <div class="caption">
- 周一（1月11日），众议院民主党正式提出弹劾川普总决议。图为2020年11月20日众议院议长佩洛西（Nancy Pelosi）在国会山举行的新闻发布会上发言。 (Drew Angerer/Getty Images)
+ 2021年1月11日，众议院民主党正式提出弹劾川普总决议。图为2020年11月20日众议院议长佩洛西（Nancy Pelosi）在国会山举行的新闻发布会上发言。 (Drew Angerer/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
