--- a/pages/nsc412/n12682885.md
+++ b/pages/nsc412/n12682885.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【疫情更新1·12】76%武汉出院者有后遗症" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1213060777-600x400-5.jpg"/>
+<div><img alt="【疫情1·12】76%武汉出院者有后遗症" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1213060777-600x400-5.jpg"/>
 <div class="caption">
  近日大陆医学界对武汉患者的追踪调查，发现76%受访者出院半年后，仍有至少一种后遗症。图为武汉“十天大会战”全民测核酸。(STR/AFP via Getty Images)
 </div></div><hr/>
