--- a/pages/nsc412/n12682075.md
+++ b/pages/nsc412/n12682075.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【更新】德州最高院拒民主党邮寄选票倡议" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1211709881-600x400.jpg"/>
+<div><img alt="【更新1.12】国会事件后 川普彭斯首会面" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2016/12/GettyImages-624368958-600x400.jpg"/>
 <div class="caption">
- 美国最高法院拒绝了民主党在德克萨斯州强制进行普遍邮寄投票的提议。图为美国最高法院。(SAUL LOEB/AFP via Getty Images)
+ 美国国会暴力事件发生后，美国总统川普和副总统彭斯1月11日首次会面。图为川普总统与彭斯在白宫门口的资历照。（Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
