--- a/pages/nsc412/n12679740.md
+++ b/pages/nsc412/n12679740.md
@@ -1,4 +1,4 @@
-### 【更新】共和党叫停民主党首次罢免川普表决
+### 【更新1.11】共和党叫停民主党首次罢免川普表决
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
